[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/Todot/Src/Checkitem/CheckItem.gd" type="Script" id=1]
[ext_resource path="res://addons/Todot/Src/Title/Title.tscn" type="PackedScene" id=2]

[node name="CheckItem" type="HBoxContainer" groups=["Item"]]
margin_right = 1023.0
margin_bottom = 24.0
script = ExtResource( 1 )

[node name="CheckBox" type="CheckBox" parent="."]
margin_right = 24.0
margin_bottom = 24.0
focus_mode = 0
size_flags_horizontal = 0
enabled_focus_mode = 0
flat = true

[node name="Title" parent="." instance=ExtResource( 2 )]
margin_left = 28.0
margin_right = 995.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
drag_item = NodePath("..")
drag_y = true

[node name="Remove" type="Button" parent="."]
margin_left = 999.0
margin_right = 1023.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
text = "x"
flat = true

[connection signal="pressed" from="CheckBox" to="." method="update_data"]
[connection signal="drag_end" from="Title" to="." method="emit_signal" binds= [ "drag_end" ]]
[connection signal="drag_start" from="Title" to="." method="emit_drag"]
[connection signal="pressed" from="Remove" to="." method="_on_Remove_pressed"]
